Se agrega validacion usando StringUtils